--- a/public/index.html
+++ b/public/index.html
@@ -465,6 +465,24 @@
         <div class="header">
             <h1>🗺️ VGVR 지역별 팀 이미지 생성기</h1>
             <p>Google Sheets 데이터를 기반으로 지역별 맞춤 지도를 생성하세요</p>
+            
+            <!-- 자동 감지 안내 -->
+            <div class="user-guide">
+                <div class="guide-item">
+                    <span class="guide-icon">🤖</span>
+                    <div class="guide-text">
+                        <strong>자동 업데이트 시스템</strong>
+                        <p>매일 오전 4시, 오후 2시에 Google Sheets 변경사항을 자동으로 감지하여 이미지를 업데이트합니다!</p>
+                    </div>
+                </div>
+                <div class="guide-item">
+                    <span class="guide-icon">⚡</span>
+                    <div class="guide-text">
+                        <strong>수동 생성</strong>
+                        <p>급하게 업데이트가 필요한 경우 아래 버튼을 클릭하세요.</p>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="controls">
